# fake-news-detector

./: .gitignore  Makefile  README.md  predictions.json  pyproject.toml  sample_news.txt
configs/: dataset.yaml  model.yaml  training.yaml
outputs/results/: test_results.json  training_history.json  validation_results.json
scripts/: evaluate.py  predict.py  train.py  visualize_embeddings.py
src/data/: dataloader.py  dataset.py  embeddings_processor.py  preprocessing.py  tokenization.py
src/inference/: predictor.py
src/model/: model.py
src/training/: evaluator.py  trainer.py
src/utils/: config.py
src/visualization/: embedding_visualizer.py
wandb/: latest-run
wandb/run-20250410_225751-xujv48df/: run-xujv48df.wandb
wandb/run-20250410_225845-bom6f7iv/: run-bom6f7iv.wandb
wandb/run-20250410_225910-f2t28kh7/: run-f2t28kh7.wandb
wandb/run-20250410_225953-ez49wnr3/: run-ez49wnr3.wandb
wandb/run-20250411_221507-lkvq8ql1/: run-lkvq8ql1.wandb
wandb/run-20250412_221339-7x7ai3dz/: run-7x7ai3dz.wandb
wandb/run-20250412_221437-i0sfgwi1/: run-i0sfgwi1.wandb
wandb/run-20250412_221700-cz5kne06/: run-cz5kne06.wandb
wandb/run-20250412_222421-pniax39j/: run-pniax39j.wandb
wandb/run-20250412_233342-eij1z4jk/: run-eij1z4jk.wandb
wandb/run-20250412_234242-hoyl355y/: run-hoyl355y.wandb
wandb/run-20250412_234447-jgidujxr/: run-jgidujxr.wandb
wandb/run-20250412_234718-w5xpk4sv/: run-w5xpk4sv.wandb
wandb/run-20250412_235251-6zt5jesh/: run-6zt5jesh.wandb
wandb/run-20250412_235810-71le7wdy/: run-71le7wdy.wandb
(+71 files in other folders)
