[project]
name = "fake-news-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "datasets>=3.5.0",
    "icecream>=2.1.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "transformers>=4.51.2",
    "wandb>=0.19.9",
    "wordcloud>=1.9.4",
]
